# hermes-desktop-tauri

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.zh-CN.md  MIGRATION_PLAN.md  OPEN_SOURCE_RELEASE_CHECKLIST.md  OPEN_SOURCE_RELEASE_CHECKLIST.zh-CN.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: App.test.tsx  App.tsx  global.d.ts  hermes.test.ts  hermes.ts  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/app/: desktop-controller.tsx  gateway-status.test.tsx  gateway-status.tsx  index.tsx  layout-constants.ts  page-search-shell.test.tsx  page-search-shell.tsx  shell.tsx  startup-controller.test.tsx  startup-controller.tsx  types.ts  updates-overlay.test.tsx  updates-overlay.tsx
src/components/: Backdrop.tsx  boot-failure-overlay.test.tsx  boot-failure-overlay.tsx  boot-failure-reauth.test.ts  boot-failure-reauth.ts  brand-mark.tsx  desktop-install-overlay.test.tsx  desktop-install-overlay.tsx  desktop-onboarding-overlay.test.tsx  desktop-onboarding-overlay.tsx  desktop-surface-shells.test.tsx  error-boundary.tsx  gateway-connecting-overlay.test.tsx  gateway-connecting-overlay.tsx  language-switcher.test.tsx  language-switcher.tsx  model-picker-shells.test.tsx  model-picker.tsx  (+5 more)
(+267 files in other folders)
